# mcp-plataform

./: .env.shared  .gitignore  README.md  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.uat.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
apps/web-portal/: Dockerfile  README.md  index.html  package.json  vite.config.js
apps/web-portal/src/: App.jsx  main.jsx
apps/web-portal/src/components/: ContactsFields.jsx  Layout.jsx  LoadingSpinner.jsx  ResultsFields.jsx  TeamFields.jsx
apps/web-portal/src/constants/: formOptions.js
apps/web-portal/src/hooks/: useAuth.js
apps/web-portal/src/pages/: Chat.jsx  Dashboard.jsx  Login.jsx  MyProjects.jsx  Profile.jsx  ProjectForm.jsx  ProjectList.jsx  ProjectView.jsx  SmartProjectCreator.jsx  TaskDetail.jsx  Tasks.jsx  UploadDocument.jsx
apps/web-portal/src/pages/project/: ActionsTab.jsx  AwardsTab.jsx  ContactsTab.jsx  MembersTab.jsx  ResultsTab.jsx
apps/web-portal/src/services/: apiService.js  chatService.js  taskDetailService.js  tasksService.js
apps/web-portal/src/styles/: tokens.css
apps/web-portal/src/theme/: theme.js  tokens.js
docs/: index.md
docs/apis/: chat.md  ingestion.md  persistence.md
docs/arquitetura/: microsservicos.md  visao-geral.md
docs/configuracao/: variaveis.md
docs/frontend/: guia.md
docs/instalacao/: rapida.md
docs/observabilidade/: stack.md
docs/operacao/: deploy.md  entrega-ti.md  tarefas-assincronas.md
docs/rag/: visao-geral.md
docs/seguranca/: padroes.md
docs/troubleshooting/: faq.md
infra/config/: mkdocs-base.yml  mkdocs-dev.yml  mkdocs-prod.yml  mkdocs-uat.yml
infra/docs-template/docs/: index.md
infra/docs-template/docs/pages/: .order  ambientes.md  aspectos-gerais.md  autenticaç╞o.md  como-instanciar.md  como-rodar.md  configuraçΣes.md  código.md  dados.md  database.md  environments.md  erros.md  estrutura-do-projeto.md  identidade-visual.md  informaçΣes.md  inteligência-artificial.md  logs.md  modificaçΣes.md  prompts.md  python.md  redis-e-celery.md  sistema-operacional.md  tce.md  upload.md
infra/observability/: otel-collector.yaml  prometheus.yml
services/mcp-chat/: Dockerfile  pyproject.toml
services/mcp-chat/app/: __main__.py  db.py  main.py  mcp_server.py  rag.py  rag_persistent.py  resources.py
services/mcp-chat/app/core/: settings.py
services/mcp-ingestion/: Dockerfile  pyproject.toml
services/mcp-ingestion/mcp_ingestion/: celery_client.py  core_settings.py  document_parser.py  event_handlers.py  ingestion_server.py  llm_analyzer.py  llm_provider.py  mcp_resources.py  normalizer.py  schema_cnmp.py
services/mcp-ingestion/mcp_ingestion/prompts/: Formulario_CNMP_2025.csv  analyze_project_document_cnmp.json
services/mcp-persistence/: Dockerfile  pyproject.toml
services/mcp-persistence/app/: main.py  schemas.py
services/mcp-persistence/app/api/routers/: projects.py  reports.py  tasks.py
services/mcp-persistence/app/core/: config.py  settings.py
services/mcp-persistence/app/db/: crud.py  models.py  session.py
services/mcp-persistence/app/institutional_routes/: __init__.py  api.py  tasks.py
services/mcp-persistence/app/migrations/: env.py
services/mcp-persistence/app/migrations/versions/: 0001_init.py  0002_owner.py  0003_tasks.py  0004_attachments.py  0005_project_cover.py  0006_project_members.py  0007_project_actions_and_new_fields.py  0008_project_likes.py  0009_contacts_results.py  0010_cnmp_awards_and_drop_project_categoria.py
services/mcp-persistence/app/security/: deps.py  entra.py
services/mcp-tasks/: Dockerfile  pyproject.toml
services/mcp-tasks/app/: celery_app.py  tasks.py
