[project]
name = "mcp-ingestion"
version = "0.1.0"
description = "Serviço de ingestão de documentos e análise por IA (OpenRouter)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "tenacity>=8.2.3",
    "prometheus-client>=0.20.0",
    "pymupdf>=1.24.0",
    "python-docx>=0.8.11",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp>=1.26.0"
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.5.0",
    "pytest>=8.2.0",
]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.editable]
packages = ["app"]
