[project]
name = "mcp-persistence"
version = "0.1.0"
description = "API de persistência (CRUD Projetos) e relatórios"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "SQLAlchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9"
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.5.0",
    "pytest>=8.2.0",
]

[tool.ruff]
line-length = 100

[project]
dependencies = [
"fastapi>=0.111.0",
"uvicorn[standard]>=0.30.0",
"pydantic>=2.7.0",
"SQLAlchemy>=2.0.30",
"psycopg2-binary>=2.9.9",
"python-dotenv>=1.0.1",
"python-multipart>=0.0.9",
"alembic>=1.13.1"
]

# OpenTelemetry
[project]
dependencies = [
"opentelemetry-sdk>=1.26.0"
"opentelemetry-instrumentation-fastapi>=0.46b0"
"opentelemetry-exporter-otlp>=1.26.0"
]
